@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Support older version of percona
+    - Minor test fixes
+
 0.000015  2020-08-14 20:45:04-07:00 America/Los_Angeles
 
     - Make it possible to clear old cache
